Refactored ui: merged dialogs and displays into ExchangeMoneyDialog and ExchangeCurrencyDialog. Made necessary corrections